[package]
name = "week-9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tracing = "0.1.37"
